tests/errors/backend/generators/infeasible_stride.expect
---CODE---
1
---STDERR---
error: operator `exp` has infeasible domain
  ┌─ tests/errors/backend/generators/infeasible_stride.fpcore:5:3
  │
5 │  (exp x))
  │   ^^^ operator has infeasible domain
  │
  = stride 1/8 is not representable

